--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,9 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'io.dropwizard', name: 'dropwizard-core', version: '1.3.1'
-    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.6.3'
+    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '2.14.2'
     compile group: 'org.jongo', name: 'jongo', version: '1.3.0'
+    testCompile group: 'com.github.fakemongo', name: 'fongo', version: '1.6.5'
 }
 
 jar {
